[tool.poetry]
name = "advent-2019"
version = "0.1.0"
description = ""
authors = ["David Stewart <david.stewart@promachos.net>"]
packages = [
    { include = "advent", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
